--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.15.0",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
+    "crypto": "0.0.3",
     "ejs": "^2.4.1",
     "ejs-mate": "^2.3.0",
     "express": "^4.13.4",
