--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/cafeburger/ecomm#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "connect-mongo": "^1.1.0",
@@ -30,6 +31,7 @@
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-session": "^1.13.0",
+    "faker": "^3.1.0",
     "mongo-connect": "0.0.6",
     "mongoose": "^4.4.13",
     "morgan": "^1.7.0",
