--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.13.0",
     "faker": "^3.1.0",
     "mongo-connect": "0.0.6",
+    "mongoosastic": "^4.0.2",
     "mongoose": "^4.4.13",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
