--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "path": "^0.12.7",
+    "webpack": "^1.13.0"
   }
 }
