--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mongoose": "^4.4.13",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^4.5.0"
   },
   "devDependencies": {
     "path": "^0.12.7",
